@@ -77,7 +77,7 @@ pylint = 1.2.1
 pyparsing = 1.5.6
 pyproj = 1.9.3
 python-dateutil = 2.5.2
-raven = 5.0.0
+raven = 6.1.0
 setuptools = 18.2
 singledispatch = 3.4.0.3
 six = 1.7.3
