@@ -15,6 +15,8 @@ Changelog of flooding
 
 - Edit help file.
 
+- Update raven
+
 1.95.1 (2014-04-11)
 -------------------
 
